# lte-pm-data-platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
data/reference/: counter_reference_seed_template.csv
docs/: reference.md  roadmap.md
scripts/: run_checks.sh
sql/init/: 002_tables_raw.sql  003_tables_audit.sql  003a_tables_ftp_registry.sql  003b_tables_ftp_cycle_runs.sql  004_reference_tables.sql  004b_topology_snapshot_tables.sql  005_analytics_views.sql  006_kpi_foundation.sql  007_kpi_views.sql  008_kpi_counter_mapping.sql  009_counter_reference_provenance.sql
sql/queries/: sample_checks.sql  vw_verified_bler_kpi_region_time.sql  vw_verified_bler_kpi_region_time_validation.sql  vw_verified_bler_kpi_site_time.sql  vw_verified_bler_kpi_site_time_validation.sql  vw_verified_prb_kpi_region_time.sql  vw_verified_prb_kpi_region_time_validation.sql  vw_verified_prb_kpi_site_time.sql  vw_verified_prb_kpi_site_time_validation.sql  vw_verified_rrc_kpi_entity_time.sql  vw_verified_rrc_kpi_output_validation.sql  vw_verified_rrc_kpi_region_time.sql  vw_verified_rrc_kpi_region_time_validation.sql  vw_verified_rrc_kpi_site_time.sql  vw_verified_rrc_kpi_site_time_validation.sql
src/lte_pm_platform/: cli.py  config.py
tests/integration/: test_sample_pipeline.py
tests/unit/: test_api.py  test_bler_verified_slice.py  test_cli_time_parsing.py  test_counter_reference_seed.py  test_file_audit_repository.py  test_file_discovery.py  test_ftp_client.py  test_hash.py  (+21 more)
ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
(+74 files in other folders)
